// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<DividerLine /> > should match the snapshot 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_block__1oah0224 sprinkles_marginTop_3_mobile__onxwjuri sprinkles_marginBottom_3_mobile__onxwjuo6 sprinkles_backgroundColor_shine__onxwju3s DividerLine_size_horizontal_2__k1y61r1"
  />
</div>
`;

exports[`<DividerLine /> > should match the snapshot as vertical 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_block__1oah0224 sprinkles_marginLeft_3_mobile__onxwjupa sprinkles_marginRight_3_mobile__onxwjuqe sprinkles_backgroundColor_shine__onxwju3s DividerLine_size_vertical_2__k1y61r4"
  />
</div>
`;
